# bentwookie

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  claude.md  kill_all_bw.sh  publish.sh  pyproject.toml  requirements.txt  start_bwloop.sh  start_bwloop_test.sh
data/: settings.json
data/prompts/: system.md
data/prompts/phases/: commit.md  deploy.md  dev.md  document.md
requirements/: PROMPT.md  v2.md
src/bentwookie/: __init__.py  cli.py  config.py  constants.py  core.py  exceptions.py  logging_util.py  models.py  prompt_builder.py  settings.py  whitespace.py  wizard.py
src/bentwookie/db/: __init__.py  connection.py  queries.py  schema.sql
src/bentwookie/loop/: __init__.py  daemon.py  phases.py  processor.py
src/bentwookie/templates/phases/: dev.md  plan.md  test.md  verify.md
src/bentwookie/templates/tasks/1plan/.resources/: instructions.md  learnings.md  template.md
src/bentwookie/templates/tasks/2dev/.resources/: instructions.md  learnings.md
src/bentwookie/templates/tasks/global/: learnings.md  settings.yaml
src/bentwookie/web/: __init__.py  app.py
src/bentwookie/web/static/: style.css
src/bentwookie/web/templates/: base.html  project_form.html  project_view.html  projects.html  request_form.html  request_view.html  requests.html  status.html
test/: __init__.py  test_cli.py  test_config.py  test_core.py  test_daemon.py  test_db_queries.py  test_logging_util.py  test_phases.py  test_processor.py  test_prompt_builder.py  test_settings.py  test_web_app.py  test_whitespace.py  test_wizard.py
test/init_test/code/: README.md  requirements.txt
test/init_test/code/dungeon_crawler/: __init__.py  combat.py  constants.py  dungeon.py  game.py  items.py  main.py  monsters.py  player.py  renderer.py
test/init_test/tasks/1plan/: dungeon-crawler.md  dungeon-crawler.md.bkup
test/init_test/tasks/1plan/.resources/: instructions.md  learnings.md
test/init_test/tasks/3test/.resources/: learnings.md
test/init_test/tasks/4deploy/.resources/: instructions.md
test/init_test/tasks/5validate/.resources/: instructions.md  learnings.md
test/init_test/tasks/global/: interfaces.md  learnings.md  settings.yaml
(+2 files in other folders)
